--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="EUC-KR">
 <title>main</title>
 <link rel="stylesheet" href="/css/main.css">
-<meta http-equiv="refresh" content="1; url=https://pianistyeseulkim.tistory.com/"> 
-<!-- 5초뒤에 자동으로 넷마블페이지로갑니다. -->
+<meta http-equiv="refresh" content="1; ur3=https://pianistyeseulkim.tistory.com/"> 
 </head>
 <body background="/img/piano.jpg">
 </body>
