--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="EUC-KR">
 <title>main</title>
 <link rel="stylesheet" href="/css/main.css">
-<meta http-equiv="refresh" content="1; ur3=https://pianistyeseulkim.tistory.com/"> 
+<meta http-equiv="refresh" content="3; url=https://pianistyeseulkim.tistory.com/">
 </head>
 <body background="/img/piano.jpg">
 </body>
