--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <link rel="stylesheet" href="/css/main.css">
 <meta http-equiv="refresh" content="5; url=https://pianistyeseulkim.tistory.com/">
 </head>
-<body background="/img/piano.jpg">
+<body background="/img/piano.png">
 </body>
 </html>
