--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>피아노 김예슬</title>
-<meta name="description" content="피아노레슨,피아노개인레슨,피아노입시레슨,피아노전공레슨,피아노입시,피아노유학준비,피아노독일유학,피아노영재레슨,피아노영재,피아노취미레슨,피아노성인레슨,선화예중피아노,선화예고피아노,인천예고피아노,선화예고피아노입시,선화예중피아노입시,인천예고피아노입시,대학교입시피아노,서울예고피아노,예원피아노,서울피아노개인레슨,서울피아노전공레슨,서울피아노전공선생님,피아노전공문의,피아노심사문의,피아노마스터클래스,피아노선생님,성북구피아노레슨,서대문구피아노레슨,용산구피아노레슨,피아노김예슬">
+<meta name="description" content="피아노레슨,피아노개인레슨,피아노입시레슨,피아노전공레슨,피아노입시,피아노유학준비,피아노독일유학,피아노영재레슨,피아노영재,피아노취미레슨,피아노성인레슨,선화예중피아노,선화예고피아노,인천예고피아노,선화예고피아노입시,선화예중피아노입시,인천예고피아노입시,대학교입시피아노,서울예고피아노,예원피아노,서울피아노개인레슨,서울피아노전공레슨,서울피아노전공선생님,피아노전공문의,피아노심사문의,피아노마스터클래스,피아노선생님,성북구피아노레슨,서대문구피아노레슨,용산구피아노레슨,피아노김예슬,피아니스트김예슬">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta property="og:type" content="website">
 <meta property="og:title" content="피아노 김예슬">
-<meta property="og:description" content="피아노레슨,피아노개인레슨,피아노입시레슨,피아노전공레슨,피아노입시,피아노유학준비,피아노독일유학,피아노영재레슨,피아노영재,피아노취미레슨,피아노성인레슨,선화예중피아노,선화예고피아노,인천예고피아노,선화예고피아노입시,선화예중피아노입시,인천예고피아노입시,대학교입시피아노,서울예고피아노,예원피아노,서울피아노개인레슨,서울피아노전공레슨,서울피아노전공선생님,피아노전공문의,피아노심사문의,피아노마스터클래스,피아노선생님,성북구피아노레슨,서대문구피아노레슨,용산구피아노레슨,피아노김예슬">
+<meta property="og:description" content="피아노레슨,피아노개인레슨,피아노입시레슨,피아노전공레슨,피아노입시,피아노유학준비,피아노독일유학,피아노영재레슨,피아노영재,피아노취미레슨,피아노성인레슨,선화예중피아노,선화예고피아노,인천예고피아노,선화예고피아노입시,선화예중피아노입시,인천예고피아노입시,대학교입시피아노,서울예고피아노,예원피아노,서울피아노개인레슨,서울피아노전공레슨,서울피아노전공선생님,피아노전공문의,피아노심사문의,피아노마스터클래스,피아노선생님,성북구피아노레슨,서대문구피아노레슨,용산구피아노레슨,피아노김예슬,피아니스트김예슬">
 <meta property="og:image" content="https://piano.yetikimm.com/img/piano.jpg">
 <meta property="og:url" content="https://piano.yetikimm.com/">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
