--- a/index.html
+++ b/index.html
@@ -22,5 +22,86 @@
 <!-- 5초뒤에 자동으로 피아니스트 김예슬 페이지로갑니다. -->
 </head>
 <body background="/img/piano.png">
+<div hidden="hidden"><span style="color: rgb(248, 247, 245); background-color: rgb(248, 244, 243);"><p>[##_Image|kage@UGkyU/btrZlaChUxK/Mp24EKrGxkFQbteS3YLeJK/img.jpg|CDM|1.3|{"originWidth":2048,"originHeight":1365,"style":"alignCenter"}_##]</p>
+<p data-ke-size="size16"><b>독일 음대 피아노 유학을 준비 중인 학생들에게 조금 이라도 도움이 되었으면 좋겠네요!</b><br /><br />독일 국립 음대 조기졸업과 더불어 학사,석사,박사 <br />-모든 과정 최고점 졸업.<br />독일 국립음대에서 피아노강사 활동 까지 하고,<b><br /></b>10년의 독일 유학생활을 경험으로 누구보다 자신있게 <b>#독일유학준비 </b>함께합니다! </p>
+<h3 data-ke-size="size23"><b>입시 준비과정</b></h3>
+<p data-ke-size="size16">&nbsp;</p>
+<h4 data-ke-size="size20"><b>입시곡 정하기</b></h4>
+<p>[##_Image|kage@bv6IsP/btrQI64cvoD/c4x0bqWtZSX3hK6kCG6pzK/img.jpg|CDM|1.3|{"originWidth":6856,"originHeight":3592,"style":"alignCenter","caption":"독일 음대 피아노 유학 입시곡 정하기"}_##]</p>
+<p data-ke-size="size16">내가 나의 음악을 잘 보여줄 수 있는 곡 정하기는 <br /><span style="color: #ef5369;"><b>제일 중요한 시작! </b></span><br /><br /><span style="color: #000000;">독일에서는 한국과 다르게 지정곡이 나오지 않아요. </span><span style="color: #000000;"><br /></span><span style="color: #000000;">입시곡 프로그램 전체를 통해 내가 어떤 음악을 하며, 어떤 장점 들을 보여줄 수 있는지 보여줘야 하기 때문에. </span><span style="color: #000000;"><br /></span><span style="color: #000000;">나의 </span><span style="color: #ee2323;"><b>장점과 가능성을 보여주는 곡</b></span><span style="color: #000000;"> 들을 고르는 것이 가장 중요합니다!</span><br /><br /><span style="color: #000000;">[시대별로 프로그램을 준비하기, 전악장 프로그램 준비하기, 협주곡 또는 현대곡 필수, 에튀드 등] </span><span style="color: #000000;"><br /></span><span style="color: #000000;">학교마다 원하는 프로그램이 조금씩 차이가 있습니다. </span><span style="color: #000000;"><br /></span><span style="color: #000000;">그렇기 때문에 각 학교별 입시요강 을 토대로 </span><span style="color: #000000;"><br /></span><span style="color: #000000;"><b>학생에게 맞는 곡을 함께 찾아주고, 함께 연구하며 프로그램을 정해드립니다!</b></span><br /><br /></p>
+<h4 data-ke-size="size20"><span style="color: #000000;"><b>곡의 이해와 해석 능력</b></span><span style="color: #000000;"><b></b></span></h4>
+<p>[##_Image|kage@mmZ3F/btrQK1fYiDx/pUKopkCAzEyZMSJBeO8gck/img.jpg|CDM|1.3|{"originWidth":643,"originHeight":310,"style":"alignCenter"}_##]</p>
+<p data-ke-size="size16">독일에서 공부하면서 제일 많이 배우고 느꼈던 것은 <br />악보대로, 느낌대로만 연주하는 것이 아닌 그 한 곡을 공부하면서-&nbsp;&nbsp;작곡가의 특징, 일생, 시대 등 <span style="color: #f89009;"><b>전체적인 음악</b></span>을 공부한다는 것입니다.<br /><br />우리가 장례식에 빨간색 옷을 입고 간다거나, 결혼식에 트레이닝복에 슬리퍼를 신지 않는 것처럼, <br />때와 상황에 따라 기본적인 예의로 옷이나 신발을 고르고 맞춰 입죠?<br />음악도 마찬가지입니다. <br />이 곡에 맞지 않는 과한 움직임이라거나, 페달, 소리 등은 절제하고, 기본에서 벗어나지 않는 선에서 본인의 개성을 추가하며 <span style="background-color: #99cefa;"><b>남들과는 다른 음악</b></span>을 만들어 갑니다!<br /><br /><span style="color: #953b34;"><i><b>"그 기본 바탕을 알아야, 거기에 어울리는 색을 칠할 수 있어요!"</b></i></span><br /><br />시대별, 작곡가별의 특징을 알아내고 더 그 곡을 잘 표현해 낼 수 있게 공부합니다. <br />탄탄한 배경에 어울리는 색, 소리를 <u><b>채워 넣어 드립니다!</b></u> </p>
+<h4 data-ke-size="size20"><b>전문적인 레슨 방향</b></h4>
+<p>[##_Image|kage@GeKP8/btrQJvh3phX/8hFlhkDBkV1K418s7yM1Lk/img.jpg|CDM|1.3|{"originWidth":870,"originHeight":580,"style":"alignCenter"}_##]</p>
+<p data-ke-size="size16">Bachelor 학사 <br />Master 석사 <br />Konzertexamen 최고연주자 (박사에준하는과정)<br /><br />독일에서 학사, 석사, 최고연주자 과정을 <br />모두 끝내고 보니, <br />"<u>과정마다</u>" 배우는 특징과 교수님들과 나누는 대화들은 정말 너무나 달랐습니다!<br /><br />기본기, 테크닉의 연구, 연습 방법, <br />건반 터치 및 소리연구, <br />악보 보는 법 및 악보 공부, 몸 릴랙스, 팔 쓰는 법, <br />음악을 사랑하는 마음, 실패와 두려움 이겨내는 법, <br />무대에서 관객에게 나를 보여주는 법, 멘탈케어까지<br /><br /><span style="color: #ee2323;"><b>" 학생부터 스스로 연주자로 성장하는 과정! "</b></span><br /><br /><span style="color: #006dd7;"><b>독일에서 요구하는 음악의 방향</b></span> 으로 레슨 하며 <br />커리큘럼에 맞게 입시를 꼼꼼하고 섬세하게 준비합니다!</p>
+<h4 data-ke-size="size20"><b>입시를 대비한 연습 및 연주</b></h4>
+<p>[##_Image|kage@bGyH7L/btrQI6JP7OV/YIQKzDGPpGAZKyFOPzlC90/img.jpg|CDM|1.3|{"originWidth":2070,"originHeight":1380,"style":"alignCenter"}_##]</p>
+<p data-ke-size="size16"><br />독일에서는 한국처럼 입시 때 앞부분만 짧게 연주한다거나, 1차 2차 지정된 곡으로 시험 보지 않아요. <br />갑자기 중간을 시킬 수도 있고, 한 곡은 끝까지 들을 수도 있고 모두 <u><b>다르답니다.</b></u> <br /><br />어떤 곡으로 시작할지 정하는 것부터 <br /><span style="color: #ee2323;"><b>모두 나의 결정</b></span>으로 시작합니다. <br /><br />실제 입시 시험처럼 <i><b>진행되는 순서, 무대연습 및 코멘트</b></i> , 시험 때 필요한 기본적인 독일어 등 <br /><br />다양한 입시 경험을 통한 <span style="background-color: #f89009;"><b>차별화된 노하우</b></span> 를 바탕으로 <br />독일 음대 입시 준비 연습을 함께 합니다!</p>
+<h4 data-ke-size="size20"><b>원서제출 및 유학 시작</b></h4>
+<p>[##_Image|kage@mO9QH/btrQMxsbjFW/4JMp9qR80G7RdVDI1onjsk/img.png|CDM|1.3|{"originWidth":1439,"originHeight":835,"style":"alignCenter"}_##]</p>
+<p data-ke-size="size16">어느 학교를 지원할지부터, 독일 현재 상황들을 고려해 체계적으로 입시를 준비합니다. <br /><br />독일 현지 음대 교수님 콘탁(연결), 원서 대행 연결까지 가능하고, <br />유학을 나가서 시험 보는 과정들, <br />시험 보고 난 후 모든 과정, <br /><span style="color: #ee2323;"><i><b>독일 음대 합격증</b></i></span> <b>을 받는 시간까지 </b><br /><b>옆에서 케어하며 끝까지 가르칩니다!</b></p>
+<p>[##_Image|kage@dAhNCL/btrQItei0Js/ti47tq1nGYQZhKzpVsFveK/img.jpg|CDM|1.3|{"originWidth":1024,"originHeight":577,"style":"alignCenter"}_##]</p>
+<p data-ke-size="size16">외국으로 나가서 공부한다는 것은 <br />쉽지 않은 결정임을 압니다. <br />그래도 배움과 성장이라는 열정을 가지고 <span style="background-color: #a6bc00;"><span style="color: #000000;">'</span></span><span style="background-color: #a6bc00;"><span style="color: #000000;"><b>독일'</b></span></span>을 가겠다는 결정을 내린 만큼,</p>
+<h4 data-ke-size="size20"><br /><b>마음과 정성을 다해, 꿈을 응원하고 지지하며 끝까지 함께 마무리하는 선생님으로 함께 하겠습니다!</b></h4>
+<p data-ke-size="size16">&nbsp;</p>
+<h3 style="text-align: center;" data-ke-size="size23"><i><b>"독일 피아노 유학준비반"</b></i><i><b><br /></b></i><i><b><br /></b></i></h3>
+<p style="text-align: center;" data-ke-size="size16">레슨문의 및 상담💌<br />010-3459-4686<br />카카오톡ID: pianistyeseulkim</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p data-ke-size="size14">#독일#독일유학#독일피아노#독일피아노유학#독일음대#독일음대피아노#독일음대유학#독일유학준비#독일피아노유학준비#유학준비피아노#피아노유학준비#피아노유학#피아노학사#피아노석사#피아노입시#피아노학사입시#피아노대학교입시#피아노음대입시#피아노대학원#피아노석사입시#피아노개인레슨선생님#피아노개인레슨#선화예중피아노#선화예고피아노#예원피아노#서울예고피아노#선화예중입시#예원입시#계원예고입시#덕원예고입시#예고입시#예고피아노입시#예중피아노입시#음대입시#피아노방문레슨#피아노전공레슨#피아노영재#영재교육</p>
+태그피아노레슨,피아노개인레슨,피아노입시레슨,피아노전공레슨,피아노입시,피아노유학준비,피아노독일유학,피아노영재레슨,피아노영재,피아노취미레슨,피아노성인레슨,선화예중피아노,선화예고피아노,인천예고피아노,선화예고피아노입시,선화예중피아노입시,인천예고피아노입시,대학교입시피아노,서울예고피아노,예원피아노,서울피아노개인레슨,서울피아노전공레슨,서울피아노전공선생님,피아노전공문의,피아노심사문의,피아노마스터클래스,피아노선생님,성북구피아노레슨,서대문구피아노레슨,용산구피아노레슨,피아노김예슬"
+</p>
+<p>[##_Image|kage@IcEii/btrZ7bn5yss/LyYVaZlrkxjbtYSFsLY4vk/img.jpg|CDM|1.3|{"originWidth":773,"originHeight":893,"style":"alignCenter","caption":"레슨실 내부","filename":"피아니스트 김예슬 레슨실.jpg"}_##]</p>
+<p data-ke-size="size16"><b>[클래스 개인 레슨실]</b></p>
+<p data-ke-size="size16">깔끔하고&nbsp;아무걱정&nbsp;없이&nbsp;하루종일&nbsp;연습할수있는&nbsp;나만의&nbsp;피아노&nbsp;연습실을&nbsp;갖는&nbsp;것이&nbsp;꿈이였는데&nbsp;방음공사도&nbsp;완성되고&nbsp;그랜드피아노까지&nbsp;들어오니&nbsp;완벽한&nbsp;레슨실이&nbsp;되었어요!&nbsp;&hearts;&nbsp;</p>
+<p data-ke-size="size16">언제나&nbsp;학생들에게&nbsp;부족함없이&nbsp;채워줄&nbsp;수&nbsp;있는&nbsp;선생님이&nbsp;되기&nbsp;위해&nbsp;끊임없이&nbsp;노력중입니다:)</p>
+<p data-ke-size="size16">이곳에서&nbsp;저도&nbsp;열심히&nbsp;연습하고&nbsp;제자들&nbsp;레슨&nbsp;할&nbsp;생각하니&nbsp;벌써&nbsp;너무&nbsp;설레입니다🥰</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p>[##_Image|kage@ZKAmX/btr0dp59Y11/yIUtThnyasqd64hTnOdISk/img.jpg|CDM|1.3|{"originWidth":773,"originHeight":1031,"style":"alignCenter","caption":"야마하 그랜드 피아노 C3","filename":"피아니스트 김예슬 레슨실 2.jpg"}_##]</p>
+<p data-ke-size="size16">야마하 C3 그랜드 피아노🤍</p>
+<p data-ke-size="size16">야마하 C3 그랜드 피아노의 음색은 일반적으로 깊고 따뜻한 소리로, 상대적으로 부드러운 느낌을 줍니다. 이는 그랜드 피아노에서 원하는 대부분의 음색을 구현하는 데 필요한 다양한 조작 요소를 가지고 있기 때문입니다. 높은 음역에서도 매우 깨끗한 소리를 내고, 낮은 음역에서는 깊고 풍부한 소리를 냅니다.&nbsp;</p>
+<p data-ke-size="size16">특히 중&middot;중&middot;고음의 각각의 음색이 명료하게 들리며, 편안하고 자연스러운 느낌을 줍니다. 야마하 C3 그랜드 피아노는 연주자의 감성을 적극적으로 반영하여 다양한 음악적 표현을 할 수 있게 합니다^^</p>
+<p data-ke-size="size16"><span style="color: #f89009;"><b><span style="background-color: #ffffff;">좋은 피아노와 함께 소리에 집중하면서 음악을 만들어갈거에요- 1:1 로 </span><span style="background-color: #ffffff;">집중하여 레슨합니다!</span></b></span><span style="color: #f89009;"><b><span style="background-color: #ffffff;"></span></b></span></p>
+<p data-ke-size="size16">&nbsp;</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p>[##_Image|kage@ReaG7/btr0aQCYmCW/WADeK2iQYaVkEIgfj5unsK/img.jpg|CDM|1.3|{"originWidth":773,"originHeight":892,"style":"alignCenter","caption":"레슨실","filename":"피아니스트 김예슬 레슨실 3.jpg"}_##]</p>
+<p data-ke-size="size16"><span>&hearts; 레슨실위치 : 서대문구</span></p>
+<p id="SE-FC56B310-CCBF-45FD-9E26-C0344365E4B8" data-ke-size="size16"><span>&hearts; 레슨 상담 : 010.3459.4686</span></p>
+<p id="SE-095A64B1-32A2-4C7E-A4E5-1F8AEA15AD9C" data-ke-size="size16"><span>​</span></p>
+<p id="SE-8A81AFF5-0D65-4D20-85C0-990ACB932121" data-ke-size="size16"><span>​</span></p>
+<p id="SE-B0D3FDE8-76D1-4A04-992F-3AA28E5861FD" data-ke-size="size16"><b><span>선화예중&bull;선화예고&bull;인천예고 출강 </span></b></p>
+<p id="SE-BD7F6AFF-CD08-45C1-A937-66B8CF67AF9B" data-ke-size="size16"><b><span>독일 음대 피아노 실기강사 역임 </span></b></p>
+<p id="SE-701BED42-47BF-4479-88F8-A9B915E8976A" data-ke-size="size16"><b><span>선화예고 실기우수졸업 / 독일 음대 박사 졸업 </span></b></p>
+<p id="SE-75445776-520A-4309-ADAC-0DBD068B8134" data-ke-size="size16"><b><span>선생님 1:1 개인레슨 (</span></b><span>예중,예고,음대,독일유학 입시준비)</span></p>
+<p data-ke-size="size16">&nbsp;</p>
+<p data-ke-size="size16"><span>#서대문구레슨&nbsp;#서대문구피아노레슨&nbsp;#서대문피아노레슨&nbsp;#피아노개인레슨&nbsp;#피아노입시레슨&nbsp;#피아노전공레슨&nbsp;#피아노전공레슨&nbsp;#피아노레슨&nbsp;#서울예고피아노&nbsp;#예원피아노&nbsp;#선화예중피아노&nbsp;#선화예고피아노&nbsp;#서울피아노레슨&nbsp;#서울피아노개인레슨&nbsp;#은평구피아노레슨&nbsp;#마포구피아노레슨&nbsp;#용산구피아노레슨&nbsp;#성북구피아노레슨&nbsp;#강북피아노레슨&nbsp;#피아노전문레슨&nbsp;#피아노입시선생님&nbsp;#피아노전공선생님&nbsp;#피아노유학준비&nbsp;#피아노교육대학원&nbsp;#피아노&nbsp;#피아노전공&nbsp;#피아노교육대학원&nbsp;#피아니스트&nbsp;#레슨 <br /></span></p>
+<p>[##_Image|kage@c1mPpB/btr9mh0LQmp/llCoIWzGNNLrZdrpYat5fK/img.jpg|CDM|1.3|{"originWidth":683,"originHeight":1024,"style":"alignCenter","width":341,"height":511,"caption":"안녕하세요 피아니스트 김예슬 입니다.","filename":"yeseul02-683x1024.jpg"}_##]</p>
+<p data-ke-size="size16">오늘은 피아노 개인레슨에 대하여 포스팅 하고자 합니다.</p>
+<p data-ke-size="size16">우선 피아노 개인레슨은 많은 이들이 음악을 배우는 가장 일반적인 방법 중 하나입니다.</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p data-ke-size="size16"><span style="color: #f89009;"><b>이 글에서는 피아노 개인레슨에 대한 정보와 이점에 대해 알아보겠습니다.</b></span> <br /><br /><span style="color: #1b711d;"><b>피아노&nbsp;개인레슨의&nbsp;이점</b></span> <br />피아노 개인레슨은 많은 이점을 제공합니다. 먼저, 개인레슨은 개인의 능력에 맞춤화된 1:1 교육을 제공합니다. 학생의 수준과 학습 속도에 맞춰 개인별로 강의를 진행합니다. 또한, 학생이 부족한 부분을 발견하고 집중적으로 수업에서 다룰 수 있도록 도와줍니다. 그리고 개인레슨은 학생에게 개별적인 피드백을 제공합니다. 강사는 학생의 연주를 듣고 실시간으로 피드백을 제공하여 학생이 실력을 향상시킬 수 있도록 도와줍니다. 이는 <span style="color: #ee2323;"><b>그룹레슨에서는 어렵게 할 수 있는 것입니다.</b></span></p>
+<p data-ke-size="size16">&nbsp;</p>
+<p>[##_Image|kage@DxGE0/btr9mkJRGFS/hJBKnyAUkZTWHq38vdLWj0/img.png|CDM|1.3|{"originWidth":574,"originHeight":367,"style":"alignCenter","filename":"KakaoTalk_20230411_112725055.png"}_##]</p>
+<p data-ke-size="size16"><br /><span style="color: #1b711d;"><b>피아노&nbsp;개인레슨의&nbsp;비용</b></span> <br />피아노 개인레슨은 그룹레슨에 비해 상대적으로 높은 비용이 듭니다. 그러나, 이는 학생에게 제공되는 1:1 개별적인 교육과 피드백의 품질 때문입니다. 학교나 지역 사회 단체에서는 저렴한 개인레슨을 제공하기도 합니다.</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p>[##_Image|kage@nPQ7w/btr9dY8wcIW/3KNfyBmjWFA0nzNJ0E0dak/img.png|CDM|1.3|{"originWidth":634,"originHeight":417,"style":"alignCenter","filename":"KakaoTalk_20230411_113035968.png"}_##]</p>
+<p data-ke-size="size16"><br /><span style="color: #1b711d;"><b>피아노&nbsp;개인레슨을&nbsp;선택하는&nbsp;방법</b></span> <br />피아노&nbsp;개인레슨을&nbsp;선택할&nbsp;때는&nbsp;몇&nbsp;가지&nbsp;고려해야&nbsp;할&nbsp;사항이&nbsp;있습니다.&nbsp;먼저,&nbsp;선생님의&nbsp;경험과&nbsp;자격증을&nbsp;확인하는&nbsp;것이&nbsp;중요합니다.&nbsp;또한,&nbsp;선생님과 학생의&nbsp;교감이&nbsp;잘&nbsp;맞는지&nbsp;확인해야&nbsp;합니다.&nbsp;그리고,&nbsp;학생의&nbsp;목표와&nbsp;학습&nbsp;계획이&nbsp;선생님과 잘&nbsp;일치하는지&nbsp;확인해야&nbsp;합니다.</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p>[##_Image|kage@EQ1eN/btr9m9unvEl/uEFK0PdwKWvJlhKAcft9Zk/img.png|CDM|1.3|{"originWidth":1080,"originHeight":421,"style":"alignCenter","filename":"KakaoTalk_20230411_113527630.png"}_##]</p>
+<h4 data-ke-size="size20"><b>피아노 개인레슨은 개인별로 맞춤화된 교육과 피드백을 제공하여 학생의 실력을 빠르게 향상시킬 수 있는 좋은 방법입니다. 비용이 높은 것이 단점이지만, <span style="color: #ee2323;">학생이 노력하고 의지한다면 보람 있는 투자일 수 있습니다.</span></b></h4>
+<p data-ke-size="size16"><span style="color: #000000;"><b><a href="https://yetikimm.com/4" target="_blank" rel="noopener">https://yetikimm.com/4</a></b></span></p>
+<figure id="og_1681179412706" contenteditable="false" data-ke-type="opengraph" data-ke-align="alignCenter" data-og-type="article" data-og-title="레슨&amp;연주 문의" data-og-description="안녕하세요 :) 독일에서 오랜기간동안 유학하고, 독일 음악대학교에서 강사를 역임하며, 클래식의 본고장인 독일에서 어떤식으로 음악을 배우고 가르치는지에 대해 직접 경험하고 쌓아온 노하" data-og-host="yetikimm.com" data-og-source-url="https://yetikimm.com/4" data-og-url="https://yetikimm.com/4" data-og-image="https://scrap.kakaocdn.net/dn/ggSWu/hySdsquk4L/NAsZp59TAPrfys4enfzPpK/img.jpg?width=800&amp;height=475&amp;face=0_0_800_475,https://scrap.kakaocdn.net/dn/uagyN/hySe1x2EHd/Pj8RA36xwofcQcIuh3Na00/img.jpg?width=800&amp;height=475&amp;face=0_0_800_475,https://scrap.kakaocdn.net/dn/lvnMx/hySdtJGEbi/dtmdMWyVpvFJx4JkS3ekRK/img.jpg?width=1334&amp;height=750&amp;face=0_0_1334_750"><a href="https://yetikimm.com/4" target="_blank" rel="noopener" data-source-url="https://yetikimm.com/4">
+<div class="og-image" style="background-image: url('https://scrap.kakaocdn.net/dn/ggSWu/hySdsquk4L/NAsZp59TAPrfys4enfzPpK/img.jpg?width=800&amp;height=475&amp;face=0_0_800_475,https://scrap.kakaocdn.net/dn/uagyN/hySe1x2EHd/Pj8RA36xwofcQcIuh3Na00/img.jpg?width=800&amp;height=475&amp;face=0_0_800_475,https://scrap.kakaocdn.net/dn/lvnMx/hySdtJGEbi/dtmdMWyVpvFJx4JkS3ekRK/img.jpg?width=1334&amp;height=750&amp;face=0_0_1334_750');">&nbsp;</div>
+<div class="og-text">
+<p class="og-title" data-ke-size="size16">레슨&amp;연주 문의</p>
+<p class="og-desc" data-ke-size="size16">안녕하세요 :) 독일에서 오랜기간동안 유학하고, 독일 음악대학교에서 강사를 역임하며, 클래식의 본고장인 독일에서 어떤식으로 음악을 배우고 가르치는지에 대해 직접 경험하고 쌓아온 노하</p>
+<p class="og-host" data-ke-size="size16">yetikimm.com</p>
+</div>
+</a></figure>
+<p data-ke-size="size16">&nbsp;</p>
+<p data-ke-size="size16"><b>프로필</b><br />선화예고&nbsp;실기우수졸업&nbsp; <br />독일&nbsp;만하임&nbsp;국립음대&nbsp;학사(Bachelor)&nbsp;조기졸업&nbsp;및&nbsp;최고점졸업 <br />독일&nbsp;만하임&nbsp;국립음대&nbsp;석사(Master)&nbsp;최고점졸업 <br />독일&nbsp;마인츠&nbsp;국립음대&nbsp;박사/최고연주자과정(Konzertexamen)&nbsp;최고점졸업 <br />&nbsp;Kulturf&ouml;rderpreis des Rotary Club Mainz-Churmeyntz 전액장학금<br /><span style="color: #0593d3;"><b>전)독일&nbsp;마인츠&nbsp;국립음대&nbsp;피아노&nbsp;실기강사&nbsp;역임</b></span></p>
+<p data-ke-size="size16">2022년&nbsp;9월&nbsp;귀국&nbsp;후 <br />현재&nbsp;서울지역&nbsp;음악&nbsp;콩쿨&nbsp;심사위원,&nbsp;선화예중,&nbsp;선화예고,&nbsp;인천예고&nbsp;출강 <br />예술의전당&nbsp;귀국독주회&nbsp;예정</p>
+<p data-ke-size="size16">&nbsp;</p>
+<p></div>
 </body>
 </html>
